@@ -1,6 +1,7 @@
 package ru.dilgorp.java.stats.game.table.controller;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 import ru.dilgorp.java.stats.game.table.domain.AppUser;
@@ -8,6 +9,7 @@ import ru.dilgorp.java.stats.game.table.repository.AppUserRepository;
 import ru.dilgorp.java.stats.game.table.response.Response;
 import ru.dilgorp.java.stats.game.table.response.ResponseType;
 
+import java.util.Collections;
 import java.util.List;
 
 import static ru.dilgorp.java.stats.game.table.domain.auth.Authority.ALL;
@@ -17,10 +19,32 @@ import static ru.dilgorp.java.stats.game.table.domain.auth.Authority.ALL;
 public class TestUserController {
 
     private final AppUserRepository appUserRepository;
+    private final BCryptPasswordEncoder encoder;
 
     @GetMapping("/")
     public Response<AppUser> getTestUser() {
-        AppUser admin = new AppUser("admin", "admin", List.of(ALL));
+        AppUser admin = new AppUser(
+                "randomUser",
+                encoder.encode("randomUser"),
+                Collections.emptyList()
+        );
+
+
+        return new Response<>(
+                ResponseType.SUCCESS,
+                null,
+                admin
+        );
+    }
+
+    @GetMapping("/admin")
+    public Response<AppUser> getAdmin() {
+        AppUser admin = new AppUser(
+                "admin",
+                encoder.encode("admin"),
+                List.of(ALL)
+        );
+
 
         return new Response<>(
                 ResponseType.SUCCESS,
